src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CRM Requests</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Cancelled %26 Closed</fullName>
        </values>
        <values>
            <fullName>In Deployment</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Parked for future</fullName>
        </values>
        <values>
            <fullName>Solved %26 Closed</fullName>
        </values>
        <values>
            <fullName>Waiting For User Feedback</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Credit and Rebill</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Final Invoice to be sent to customer</fullName>
        </values>
        <values>
            <fullName>Cancelled %26 Closed</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Waiting For Internal Feedback</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>EquipmentComplaint</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Addition Provided</fullName>
        </values>
        <values>
            <fullName>Answer Provided</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Customer Action</fullName>
        </values>
        <values>
            <fullName>Forwarded</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Completed</fullName>
        </values>
        <values>
            <fullName>Solution Provided</fullName>
        </values>
        <values>
            <fullName>Waiting</fullName>
        </values>
        <values>
            <fullName>ready for release</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Return Authorization</fullName>
        <description>Currently Used by North America Implants to track returns process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Authorized</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>Received</fullName>
        </values>
        <values>
            <fullName>Waiting For Customer Feedback</fullName>
        </values>
        <values>
            <fullName>Waiting For Internal Feedback</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service Complaint</fullName>
        <description>The global module to handle Service Complaint</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Solved</fullName>
        </values>
        <values>
            <fullName>Waiting For Customer Feedback</fullName>
        </values>
        <values>
            <fullName>Waiting For Internal Feedback</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>TrackWise</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Solved</fullName>
        </values>
        <values>
            <fullName>Waiting For Customer Feedback</fullName>
        </values>
        <values>
            <fullName>Waiting For Internal Feedback</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Text( Account.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Market__c</fullName>
        <formula>Text( Account.Market__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager__c</fullName>
        <formula>Account.Owner.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressCombinedFields__c</fullName>
        <description>Used mainly to pull the combined fields field from the address to be used in the Service cloud flow directly.</description>
        <formula>Address__r.CombinedFields__c</formula>
        <label>Address Combined Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SureSmile Address HRID</description>
        <inlineHelpText>SureSmile Address</inlineHelpText>
        <label>Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_for_ReturnExchange__c</fullName>
        <inlineHelpText>Order amount of original order of products.</inlineHelpText>
        <label>Amount for Return or Exchange</label>
        <summarizedField>Article__c.Total_Original_Purchase_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Article__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Return Authorization</value>
        </summaryFilterItems>
        <summaryForeignKey>Article__c.Related_Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approval_Routing__c</fullName>
        <label>Approval Routing</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Rep, Manager</fullName>
                </value>
                <value>
                    <fullName>Manager, Sales Director</fullName>
                </value>
                <value>
                    <fullName>Rep, Manager, Sales Director</fullName>
                </value>
                <value>
                    <fullName>Manager, Sales Director, Finance</fullName>
                </value>
                <value>
                    <fullName>Rep, Manager, Sales Director, Finance</fullName>
                </value>
                <value>
                    <fullName>Manager Only</fullName>
                </value>
                <value>
                    <fullName>Customer Service Only</fullName>
                </value>
                <value>
                    <fullName>Customer Service Manager, Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <description>Used to fill in the article number related to a sevice feedback case.</description>
        <label>Article Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_To__c</fullName>
        <label>Assign To</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Me</fullName>
                </value>
                <value>
                    <fullName>Previous Owner</fullName>
                </value>
                <value>
                    <fullName>Case Creator</fullName>
                </value>
                <value>
                    <fullName>00G6M0000040FqAUAU</fullName>
                    <label>Queue: ANZ: TCS Victoria – Unassigned</label>
                </value>
                <value>
                    <fullName>00G6M0000040FpvUAE</fullName>
                    <label>Queue: ANZ: Software Support – Unassigned</label>
                </value>
                <value>
                    <fullName>00G6M0000040FqFUAU</fullName>
                    <label>Queue: ANZ: TCS New South Wales – Unassigned</label>
                </value>
                <value>
                    <fullName>00G6M000003RRUXUA4</fullName>
                    <label>Queue: BNL: Implants Customer Service</label>
                </value>
                <value>
                    <fullName>00G6M000003RRUwUAO</fullName>
                    <label>Queue: BNL: MIS Customer Service</label>
                </value>
                <value>
                    <fullName>00G6M000003RQKqUAO</fullName>
                    <label>Queue: BNL: LAB Customer Service</label>
                </value>
                <value>
                    <fullName>00G6M000003RRnoUAG</fullName>
                    <label>Queue: BNL: Complaints CS</label>
                </value>
                <value>
                    <fullName>00G6M000003RUefUAG</fullName>
                    <label>Queue: DACH: VDW Customer Care Team</label>
                </value>
                <value>
                    <fullName>00G0J000002twr9UAA</fullName>
                    <label>Queue: DE: DI - ATLANTIS Support</label>
                </value>
                <value>
                    <fullName>00G200000013jSGEAY</fullName>
                    <label>Queue: DE: DI - Service Complaint</label>
                </value>
                <value>
                    <fullName>00G200000013d44EAA</fullName>
                    <label>Queue: DE: DI - SIMPLANT Support</label>
                </value>
                <value>
                    <fullName>00G0J000002tx8AUAQ</fullName>
                    <label>Queue: DE: Product Improvements</label>
                </value>
                <value>
                    <fullName>00G20000002uStfEAE</fullName>
                    <label>Queue: DE: Retouren Gutschrift</label>
                </value>
                <value>
                    <fullName>00G20000002uStpEAE</fullName>
                    <label>Queue: DE: Service Reklamationen</label>
                </value>
                <value>
                    <fullName>00G20000002uStkEAE</fullName>
                    <label>Queue: DE: UPS Rückholung</label>
                </value>
                <value>
                    <fullName>00G20000002uStuEAE</fullName>
                    <label>Queue: DE: Web-Shop</label>
                </value>
                <value>
                    <fullName>00G20000002uStaEAE</fullName>
                    <label>Queue: DE: Wert Gutschrift</label>
                </value>
                <value>
                    <fullName>00G6M000003RQbIUAW</fullName>
                    <label>Queue: FR: Réclamations &amp; Retours</label>
                </value>
                <value>
                    <fullName>00G6M000003RQaeUAG</fullName>
                    <label>Queue: FR: Service Clients</label>
                </value>
                <value>
                    <fullName>00G6M000003RQaoUAG</fullName>
                    <label>Queue: FR: Support Atlantis</label>
                </value>
                <value>
                    <fullName>00G6M000003RQb8UAG</fullName>
                    <label>Queue: FR: Support Clinique et Scientifique</label>
                </value>
                <value>
                    <fullName>00G6M000003RQayUAG</fullName>
                    <label>Queue: FR: Support Simplant</label>
                </value>
                <value>
                    <fullName>00G6M000004GUdLUAW</fullName>
                    <label>Queue: FR: Support Suresmile</label>
                </value>
                <value>
                    <fullName>00G6M0000040E3BUAU</fullName>
                    <label>Queue: IB: CS Pedidos</label>
                </value>
                <value>
                    <fullName>00G6M000003RXN8UAO</fullName>
                    <label>Queue: IB: CS DSO</label>
                </value>
                <value>
                    <fullName>00G6M000004GUchUAG</fullName>
                    <label>Queue: IB: SureSmile Support</label>
                </value>
                <value>
                    <fullName>00G6M000003RQgmUAG</fullName>
                    <label>Queue: IN: Customer Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional field! it will be populated by the Created User if left blank and the creator is not a system admin</inlineHelpText>
        <label>CRM Analyst</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.User_Type__c</field>
                <operation>equals</operation>
                <value>National Admin</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CRM_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CS_Processing_Time_Rec_to_Closed__c</fullName>
        <formula>IF (Returns_Processing_Time_Rec_to_Closed__c &gt; 0, /*check to see if Returns Processing Time is greater than zero*/
TEXT(FLOOR( Returns_Processing_Time_Rec_to_Closed__c)) &amp; &quot; days &quot; &amp; /*returns the number of days in Returns Processing Time*/
TEXT(FLOOR( 24 * (Returns_Processing_Time_Rec_to_Closed__c - FLOOR(Returns_Processing_Time_Rec_to_Closed__c) ))) &amp; &quot; hours &quot; &amp; /*returns the remaining number of hours in Returns Processing Time*/
TEXT(ROUND(60 * (ROUND( 24 * ( Returns_Processing_Time_Rec_to_Closed__c - FLOOR(Returns_Processing_Time_Rec_to_Closed__c) ),8) - FLOOR(ROUND(24 * (Returns_Processing_Time_Rec_to_Closed__c - FLOOR(Returns_Processing_Time_Rec_to_Closed__c) ),8)) ),0)) &amp; &quot; mins&quot; /*returns the remaining number of minutes in Returns Processing Time*/
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS Processing Time Rec to Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Processing_Time__c</fullName>
        <formula>Customer_Service_Processing_Completed__c - Field_Approvals_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS Processing Time(Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancellation_reason__c</fullName>
        <description>Add information about why you cancelled the CRM Request. - USED FOR CRM REQUESTS</description>
        <inlineHelpText>Add information about why you cancelled the CRM Request.</inlineHelpText>
        <label>Cancellation reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CaseType__c</fullName>
        <description>Upper level for case classification. New values introduced with June 2022 release.</description>
        <label>Case Type (Global)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order &amp; Invoicing</fullName>
                </value>
                <value>
                    <fullName>Shipping &amp; Delivery</fullName>
                </value>
                <value>
                    <fullName>Product Support</fullName>
                </value>
                <value>
                    <fullName>Credit/rebill</fullName>
                    <color>#A53711</color>
                    <label>Credit/rebill</label>
                </value>
                <value>
                    <fullName>Return</fullName>
                    <color>#419249</color>
                    <label>Return</label>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Service complaint</fullName>
                    <color>#0B6FCE</color>
                    <label>Customer Complaint</label>
                </value>
                <value>
                    <fullName>General support/question</fullName>
                    <color>#A845DC</color>
                    <label>Customer Interaction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Definition__c</fullName>
        <formula>Case(TEXT( Transaction_Type__c),&quot;Return&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150J0000045JgE&quot;, &quot;Product Return&quot;, 50,200),&quot;Exchange&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=0150J0000045JgJ&quot;, &quot;Product Exchange&quot;,50,200),&quot;Credit/Rebill&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150J0000045JgO&quot;, &quot;Product Exchange&quot;,50,200),&quot;NULL&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_HQ__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case # (HQ)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_ID_HQ__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case ID (18 Digits)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Initiated_By__c</fullName>
        <label>Case Initiated By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Area Director</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record__c</fullName>
        <formula>CASE(  RecordType.Name  , &apos;Service Complaint&apos;, &quot;Service Case&quot;, &quot;Siroforce&quot;, &quot;Siroforce Case&quot;,&quot;Case&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Stage__c</fullName>
        <label>Case Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Subtype__c</fullName>
        <label>Case Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Courtesy Credit</fullName>
                </value>
                <value>
                    <fullName>Late Delivery</fullName>
                </value>
                <value>
                    <fullName>Late Order Release</fullName>
                </value>
                <value>
                    <fullName>Lost shipment</fullName>
                </value>
                <value>
                    <fullName>Master Incorrect</fullName>
                </value>
                <value>
                    <fullName>Missed Discount</fullName>
                </value>
                <value>
                    <fullName>Price Not Communicated</fullName>
                </value>
                <value>
                    <fullName>Pricing Error</fullName>
                </value>
                <value>
                    <fullName>Rebill To Correct Account</fullName>
                </value>
                <value>
                    <fullName>Wrong Account</fullName>
                </value>
                <value>
                    <fullName>Wrong Shipping Address</fullName>
                </value>
                <value>
                    <fullName>Wrong Shipping Method</fullName>
                </value>
                <value>
                    <fullName>Wrong Terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Turnaround_Time_Assigned_to_Closed__c</fullName>
        <formula>IF( IsClosed =FALSE, &quot;&quot;,

TEXT(
 FLOOR(ClosedDate -  Date_Assigned_to_Owner__c )
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD((ClosedDate - Date_Assigned_to_Owner__c)*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD((ClosedDate - Date_Assigned_to_Owner__c)*1440,60),0)
) &amp;&quot; Minutes &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Turnaround Time Assigned to Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Category__c</fullName>
        <description>We couldn&apos;t use the standard field Type since there are many limitations with standard fields.</description>
        <label>Case Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CaseType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                    <color>#339999</color>
                    <label>Billing</label>
                </value>
                <value>
                    <fullName>Communication &amp; Service</fullName>
                    <color>#0B6FCE</color>
                    <label>Communication &amp; Service</label>
                </value>
                <value>
                    <fullName>Consignment</fullName>
                    <color>#419249</color>
                    <label>Consignment</label>
                </value>
                <value>
                    <fullName>Customer Error</fullName>
                </value>
                <value>
                    <fullName>Customer Interaction</fullName>
                    <color>#FF0000</color>
                    <label>Customer Interaction</label>
                </value>
                <value>
                    <fullName>Customer Service Error</fullName>
                    <color>#A845DC</color>
                    <label>Customer Service Error</label>
                </value>
                <value>
                    <fullName>Dropped Implant</fullName>
                    <color>#FF9900</color>
                    <label>Dropped Implant</label>
                </value>
                <value>
                    <fullName>E-commerce site</fullName>
                    <color>#A53711</color>
                    <label>E-commerce site</label>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                    <color>#66E9BD</color>
                    <label>Exchange</label>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Lost Shipment Error</fullName>
                    <color>#0B24BE</color>
                    <label>Lost Shipment Error</label>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Orders</fullName>
                    <color>#999999</color>
                    <label>Orders</label>
                </value>
                <value>
                    <fullName>Orders &amp; Billing</fullName>
                    <color>#419249</color>
                    <label>Orders &amp; Billing</label>
                </value>
                <value>
                    <fullName>Over Ordered</fullName>
                    <color>#B6E32E</color>
                    <label>Over Ordered</label>
                </value>
                <value>
                    <fullName>Pricing System Error</fullName>
                    <color>#3333FF</color>
                    <label>Pricing System Error</label>
                </value>
                <value>
                    <fullName>Product Related</fullName>
                    <color>#F96FB7</color>
                    <label>Product Related</label>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                    <color>#2F5D85</color>
                    <label>Return</label>
                </value>
                <value>
                    <fullName>Sales Team Error</fullName>
                    <color>#AFCADF</color>
                    <label>Sales Team Error</label>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                    <color>#663300</color>
                    <label>Shipping</label>
                </value>
                <value>
                    <fullName>Software Complaint</fullName>
                    <color>#EFAE73</color>
                    <label>Software</label>
                </value>
                <value>
                    <fullName>Pre-Order Request</fullName>
                </value>
                <value>
                    <fullName>Order Information</fullName>
                </value>
                <value>
                    <fullName>Incorrect Order Details</fullName>
                </value>
                <value>
                    <fullName>Credit Issue</fullName>
                </value>
                <value>
                    <fullName>Cancellation Request</fullName>
                </value>
                <value>
                    <fullName>Missing Order/Invoice</fullName>
                </value>
                <value>
                    <fullName>Late Shipment/Delivery</fullName>
                </value>
                <value>
                    <fullName>Incorrect Shipping Details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>